apps/portainer/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: portainer
  namespace: apps
  labels:
    app.kubernetes.io/name: portainer
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: portainer
  template:
    metadata:
      labels:
        app: portainer
        app.kubernetes.io/name: portainer
    spec:
      serviceAccountName: portainer
      containers:
      - name: portainer
        image: portainer/portainer-ce:2.45.2
        ports:
          - containerPort: 9000
        volumeMounts:
          - name: data
            mountPath: /data
        readinessProbe:
          httpGet:
            path: /api/system/status
            port: 9000
          initialDelaySeconds: 10
          periodSeconds: 10
        livenessProbe:
          httpGet:
            path: /api/system/status
            port: 9000
          initialDelaySeconds: 30
          periodSeconds: 30
        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"
          limits:
            cpu: "250m"
            memory: "256Mi"
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: portainer-pvc
